chore: fix overflow

--- a/cssResponsive_event/style.css
+++ b/cssResponsive_event/style.css
@@ -58,7 +58,7 @@ nav .menu .item {
     height: 100vh;
     width: 100%;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 
